@@ -6,22 +6,29 @@ import com.tracker.tasktracker.dto.UserRequestUpdateDto;
 import com.tracker.tasktracker.dto.UserResponseDto;
 import com.tracker.tasktracker.entity.Task;
 import com.tracker.tasktracker.entity.User;
+import com.tracker.tasktracker.enums.TaskPriority;
+import com.tracker.tasktracker.enums.TaskStatus;
 import com.tracker.tasktracker.exception.EmailAlreadyExistsException;
 import com.tracker.tasktracker.exception.UserNotFoundException;
 import com.tracker.tasktracker.exception.UsernameAlreadyExistsException;
+import com.tracker.tasktracker.repository.TaskRepository;
 import com.tracker.tasktracker.repository.UserRepository;
+import com.tracker.tasktracker.specification.TaskSpecifications;
 import jakarta.transaction.Transactional;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImplementation implements UserService {
     private final UserRepository userRepository;
+    private final TaskRepository taskRepository;
 
-    public UserServiceImplementation(UserRepository userRepository) {
+    public UserServiceImplementation(UserRepository userRepository, TaskRepository taskRepository) {
         this.userRepository = userRepository;
+        this.taskRepository = taskRepository;
     }
 
     private TaskSummaryDto toTaskSummaryDto(Task task) {
@@ -71,7 +78,7 @@ public class UserServiceImplementation implements UserService {
         return userRepository.findAll()
                 .stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -82,6 +89,22 @@ public class UserServiceImplementation implements UserService {
     }
 
     @Override
+    public List<TaskSummaryDto> getUserTasks(Long id, TaskStatus status, TaskPriority priority) {
+        if (!userRepository.existsById(id)) {
+            throw new UserNotFoundException(id);
+        }
+        Specification<Task> specification = Specification
+                .where(TaskSpecifications.hasUserId(id))
+                .and(TaskSpecifications.hasStatus(status))
+                .and(TaskSpecifications.hasPriority(priority));
+        return taskRepository.findAll(specification, Sort.by("dueDate").ascending())
+                .stream()
+                .map(this::toTaskSummaryDto)
+                .toList();
+    }
+
+    @Override
+    @Transactional
     public UserResponseDto updateUser(Long id, UserRequestUpdateDto userRequestUpdateDto) {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new UserNotFoundException(id));
@@ -104,6 +127,7 @@ public class UserServiceImplementation implements UserService {
     }
 
     @Override
+    @Transactional
     public void deleteUser(Long id) {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new UserNotFoundException(id));
